panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_to_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_to_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_to_static.c"
   (declaration x~0 `int` 42)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration p~3 `ptr<int>` (addressof (name x~0 `int`)))
         (declaration local_copy~4 `int` (deref (name p~3 `ptr<int>`)))
         (expression (assign (deref (name p~3 `ptr<int>`)) 27))
         (return (add (add (name local_copy~4 `int`) (deref (name p~3 `ptr<int>`))) (name x~0 `int`))))))

----- stderr -----
