panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_return_global_variable_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_return_global_variable_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (definition return_value~0 `int` 5)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (name return_value~0 `int`)))))

----- stderr -----
