panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_return_in_compound_statement_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_return_in_compound_statement_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_in_compound_statement_in_main.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (compound-statement
            (declaration a~3 `int` 27)
            (return (name a~3 `int`)))
         (return (name a~2 `int`)))))

----- stderr -----
