panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_return_without_expr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_return_without_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_without_expr.c"
   (declaration exit~0 `fn(∅: int) -> void` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (return ∅)
         (expression
            (call (name exit~0 `fn(∅: int) -> void`)
               42))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn() -> void`))))))

----- stderr -----
