panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_variable_with_initialiser_doesnt_share_slot_with_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_variable_with_initialiser_doesnt_share_slot_with_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_variable_with_initialiser_doesnt_share_slot_with_initialiser.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration b~3 `int` (name a~2 `int`))
         (expression (assign (name b~3 `int`) 27))
         (return (name a~2 `int`)))))

----- stderr -----
