panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_zero_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_zero_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_zero_extend.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`
      (params
         argv~3 `ptr<ptr<char>>`
         l~4 `unsigned long`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 1))
               (name l~4 `unsigned long`)))))
   (function-definition
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (compound-statement
            (declaration c~9 `unsigned char` 42)
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name c~9 `unsigned char`)))
            (declaration s~10 `unsigned short` (name c~9 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name s~10 `unsigned short`)))
            (declaration i~11 `unsigned int` (name c~9 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name i~11 `unsigned int`)))
            (declaration j~12 `unsigned int` (name s~10 `unsigned short`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name j~12 `unsigned int`)))
            (declaration l~13 `unsigned long` (name c~9 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name l~13 `unsigned long`)))
            (declaration m~14 `unsigned long` (name s~10 `unsigned short`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name m~14 `unsigned long`)))
            (declaration n~15 `unsigned long` (name i~11 `unsigned int`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name n~15 `unsigned long`))))
         (compound-statement
            (declaration c~16 `unsigned char` 250)
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name c~16 `unsigned char`)))
            (declaration s~17 `unsigned short` (name c~16 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name s~17 `unsigned short`)))
            (declaration i~18 `unsigned int` (name c~16 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name i~18 `unsigned int`)))
            (declaration j~19 `unsigned int` (name s~17 `unsigned short`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name j~19 `unsigned int`)))
            (declaration l~20 `unsigned long` (name c~16 `unsigned char`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name l~20 `unsigned long`)))
            (declaration m~21 `unsigned long` (name s~17 `unsigned short`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name m~21 `unsigned long`)))
            (declaration n~22 `unsigned long` (name i~18 `unsigned int`))
            (expression
               (call (name print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`)
                  (name argv~8 `ptr<ptr<char>>`)
                  (name n~22 `unsigned long`)))))))

----- stderr -----
